# m365_security_posture

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
m365_posture/: __init__.py  __main__.py  cli.py  compliance.py  correlation.py  database.py  drift.py  essential_eight.py  gitlab_export.py  graph_api.py  models.py  planner.py  report.py  scoring.py  storage.py  tenant_db.py  web_frontend.py  webapp.py
m365_posture/collectors/: __init__.py  graph_client.py
m365_posture/parsers/: __init__.py  m365_assess.py  sct.py  scuba.py  secure_score.py  zero_trust.py  zero_trust_report.py
m365_posture/seed_data/: essential_eight_asd_blueprint.json  essential_eight_ism_mapping.json  essential_eight_maturity.json  essential_eight_microsoft_mapping.json  secure_score_controls.json
powershell/: Collect-ScubaGear.ps1  Collect-SecureScore.ps1  Collect-ZeroTrust.ps1
sample-reports/M365BaselineConformance_2026_03_16_13_56_14/: ActionPlan.csv  BaselineReports.html  ScubaResults.csv  ScubaResults_a845fee3-d0d5-48b1.json  TestResults.json
sample-reports/M365BaselineConformance_2026_03_16_13_56_14/IndividualReports/: AADReport.html  TeamsReport.html
sample-reports/ZeroTrustReport/: ZeroTrustAssessmentReport.html
sample-reports/ZeroTrustReport/zt-export/: ZeroTrustAssessmentReport.json  ztConfig.json
sample-reports/ZeroTrustReport/zt-export/Application/: Application-0.json
sample-reports/ZeroTrustReport/zt-export/Device/: Device-0.json
sample-reports/ZeroTrustReport/zt-export/RoleAssignment/: RoleAssignment-0.json
(+10 files in other folders)
