[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "m365-security-posture"
version = "0.1.0"
description = "M365 Security Posture Management Tool - Unified security assessment across multiple tenants"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
web = ["flask>=3.0"]
graph = ["requests>=2.28", "msal>=1.20"]
all = ["flask>=3.0", "requests>=2.28", "msal>=1.20"]

[project.scripts]
m365-posture = "m365_posture.cli:main"

[tool.setuptools.packages.find]
include = ["m365_posture*"]
